--- a/pom.xml
+++ b/pom.xml
@@ -103,8 +103,18 @@ of testing facilities designed for use with TestNG (http://testng.org/), so it's
             <version>${tapestry-release-version}</version>
             <scope>provided</scope>
         </dependency>
-
-    </dependencies>
+                <dependency>
+                        <groupId>javax.ws.rs</groupId>
+                        <artifactId>javax.ws.rs</artifactId>
+                        <version>1.0</version>
+                        <type>jar</type>
+                </dependency>
+                <dependency>
+                        <groupId>javax.ws.rs</groupId>
+                        <artifactId>javax.ws.rs-api</artifactId>
+                        <version>2.0.1</version>
+                </dependency>
+        </dependencies>
     <build>
         <finalName>IT250-DZ</finalName>
         <plugins>
