--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
  <artifactId>restfb</artifactId>
  <version>1.6.11</version>
  </dependency>
+<dependency>
+ <groupId>org.tynamo</groupId>
+ <artifactId>tapestry-security</artifactId>
+ <version>0.6.2</version>
+ </dependency>
 
 
 
